tests/ui/nul_end_wchz.stderr
error: C-style string cannot contain nul characters
 --> $DIR/nul_end_wchz.rs:3:35
  |
3 | const NUL_END: &[wchar_t] = wchz!("nul byte end\0");
  |                                   ^^^^^^^^^^^^^^^^
