tests/ui/nul_end_wchz.rs
use wchar::{wchar_t, wchz};

const NUL_END: &[wchar_t] = wchz!("nul byte end\0");

fn main() {}
